--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cjmarsh725/ITS#readme",
   "dependencies": {},
   "devDependencies": {
+    "rollup-plugin-live-server": "^1.0.3",
     "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
